syntax = "proto3";

package edu.usfca.protobuf;

import "common.proto";
import "vendor/openrtb.proto";

// A mobile device profile.
message DeviceProfile {
    reserved 2 to 4, 6 to 8, 11 to 100; // Do NOT modify this.

    // Unique id for each device.
    DeviceId device_id = 1; // TODO: Replace ??.

    // An array of summaries of App Activity.
    repeated AppActivity activity = 5; // TODO: Replace ??.

    // Timestamp (in millis) of the first/last device activity.
    int64 first_at = 9;
    int64 last_at = 10;

    // A message that summarizes in-app activities.
    message AppActivity {
        reserved 7 to 100; // Do NOT modify this.

        // Unique store bundle of an app.
        string bundle = 1;

        // Timestamp (in millis) of the first/last in-app activity.
        int64 first_at = 2; // TODO: Replace ??.
        int64 last_at = 3; // TODO: Replace ??.

        // The number of events received from this app for this user (lifetime).
        int64 count_lifetime = 4;

        // The number of events received from this app for this user (today).
        int64 count_today = 5;

        // The number of events received from this app for this user through each exchange (lifetime).
        // Key is an enum value of Exchange proto (in common.proto).
        // Value is the number (count).
        map<int32, int32> count_per_exchange = 6;
    }
    /* Starter code: Replace each ?? by either int32 or int64 (don't use sint or uint).
    message AppActivity {
      reserved 7 to 100; // Do NOT modify this.

      // Unique store bundle of an app.
      string bundle = 1;

      // Timestamp (in millis) of the first/last in-app activity.
      ?? first_at = 2;
      ?? last_at = 3;

      // The number of events received from this app for this user (lifetime).
      ?? count_lifetime = 4;

      // The number of events received from this app for this user (today).
      ?? count_today = 5;

      // The number of events received from this app for this user through each exchange (lifetime).
      // Key is an enum value of Exchange proto (in common.proto).
      // Value is the number (count).
      map<int32,??> count_per_exchange = 6;
    }
    */
}
